--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -6,5 +6,5 @@
         | Continue with Github
     button.social-login--facebook
         span
-            i.fab.fa-facebook
+            i.fab.fa-facebook-square
         | Continue with Facebook    
