--- a/views/home.pug
+++ b/views/home.pug
@@ -1,10 +1,15 @@
 
 //- block content override
-
 extends layouts/main.pug
+include mixins/videoBlock
 
-block content 
+block content
     .videos
-        each video in videos
-            h1=video.title
+        each item in videos
+            +videoBlock({
+                id: item.id,
+                title: item.title,
+                views: item.views,
+                videoFile: item.videoFile
+            })
 
