--- a/views/videoUpload.pug
+++ b/views/videoUpload.pug
@@ -2,9 +2,16 @@ extends layouts/main.pug
 
 block content
     .form-container
-        form(action=routes.upload, method="post")
-        label(for="videoFile") Video File
-        input(type="file", id="videoFild", name="videoFile")
-        input(type="text", placeholder="Title", name="title")
-        input(type="text", placeholder="Description", name="description")
-        input(type="submit", value="Upload Video")
+        form(action=`/videos${routes.upload}`, method="post")
+            label(for="videoFile") Video File
+            input(type="file", id="videoFild", name="videoFile", required=true)
+            input(type="text", name="title", placeholder="Title", required=true)
+            input(type="text", name="description", placeholder="Description", required=true)
+            input(type="submit", value="Join Now", required=true)
+    //-
+        form(action=routes.join, method="post")
+            input(type="text", name="name", placeholder="Full Name")
+            input(type="email", name ="email", placeholder="Email")
+            input(type="password", name ="password", placeholder="Password")
+            input(type="password", name ="password2", placeholder="Verify Password")
+            input(type="submit", value="Join Now")
