--- a/views/userEditProfile.pug
+++ b/views/userEditProfile.pug
@@ -6,6 +6,6 @@ block content
             label(for="avatar") Avatar
             input(type="file", id="avatar", name="avatar")
             input(type="text", placeholder="Name", name="name")
-            input(type="text", placeholder="Email", name="email")
+            input(type="email", placeholder="Email", name="email")
             input(type="submit", value="Update Profile")
         a.form-container__link(href=routes.changePassword) Change Password
