--- a/views/videoEdit.pug
+++ b/views/videoEdit.pug
@@ -2,8 +2,9 @@ extends layouts/main.pug
 
 block content
     .form-container
-        form(action=routes.editVideo, method="post")
-        input(type="text", placeholder="Title", name="title")
-        input(type="text", placeholder="Description", name="description")
-        input(type="submit", value="Update Video")
+        h1=video.id
+        form(action=routes.editVideo(video.id), method="post")
+            input(type="text", placeholder="Title", name="title", value=video.title)
+            textarea(name="description", placeholder="Description")=video.description
+            input(type="submit", value="Update Video")
     a.form-container__link(href=routes.deleteVideo) Delete Video
