--- a/views/videoUpload.pug
+++ b/views/videoUpload.pug
@@ -6,5 +6,5 @@ block content
             label(for="videoFile") Video File
             input(type="file", id="videoFild", name="videoFile", required=true, accept="video/*")
             input(type="text", name="title", placeholder="Title", required=true)
-            input(type="text", name="description", placeholder="Description", required=true)
+            textarea(name="description", placeholder="Description", required=true)
             input(type="submit", value="Join Now", required=true)
