--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -6,5 +6,10 @@ block content
     .video__info
         a(href=routes.editVideo(video.id)) Edit Video
         h5.video__title=video.title
-        span.video__views=video.views
-        p.video__description=video.description
+        span.video__views #{video.views} views
+        p.video__description=video.description 
+    .video__comments
+        if video.comments.length === 1
+            span.video__comment-number 1 comment
+        else
+            spen.video__commnet-number #{video.comments.length} comments
