--- a/views/videoEdit.pug
+++ b/views/videoEdit.pug
@@ -2,9 +2,9 @@ extends layouts/main.pug
 
 block content
     .form-container
-        h1=video.id
         form(action=routes.editVideo(video.id), method="post")
             input(type="text", placeholder="Title", name="title", value=video.title)
             textarea(name="description", placeholder="Description")=video.description
             input(type="submit", value="Update Video")
-    a.form-container__link(href=routes.deleteVideo) Delete Video
+    h1=video.id
+    a.form-container__link.form-container__link--delete(href=routes.deleteVideo(video.id)) Delete Video
