--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -9,8 +9,10 @@ html
     head
         script(src="https://kit.fontawesome.com/ab7da79ab3.js", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header.pug
         main
             block content
         include ../partials/footer.pug
+        script(src="/static/main.js")
