--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,11 @@
 
-@import "/config/_variables.scss";
+@import "config/_variables.scss";
+@import "config/reset.scss";
+@import "main.scss";
+
+@import "partials/header.scss";
+@import "partials/footer.scss";
 
 body {
-
-    background-color: $sexyColor;
+    background-color: $grey;
 }
