--- a/assets/scss/partials/footer.scss
+++ b/assets/scss/partials/footer.scss
@@ -1,6 +1,6 @@
 
 .footer {
-    margin: 50px 0;
+    margin: 50px 0px 0px 0px;
     padding-top: 50px;
     border-top: 3px solid rgba(0,0,0,0.1);
     width: 100%;
