--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,7 +5,5 @@
 
 @import "partials/header.scss";
 @import "partials/footer.scss";
-
-body {
-    background-color: $grey;
-}
+@import "partials/form.scss";
+@import "partials/socialLogin.scss";
