--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -1,8 +1,6 @@
 
 $red: #ea232c;
 $dark-red: #bb2f2a;
-$grey: #f5f5f5f5;
+$grey: #f5f5f5;
 $black: #444444;
-$dark-grey: #e7e7e7e7;
-$joinNow: #3498db;
-$facebookColor: #3a5998;
+$dark-grey: #e7e7e7;
