--- a/views/home.pug
+++ b/views/home.pug
@@ -1,15 +1,14 @@
 
 //- block content override
-extends layouts/main.pug
+extends layouts/main
 include mixins/videoBlock
 
 block content
-    .videos
-        each item in videos
+    .home-videos
+        each item in videos 
             +videoBlock({
-                id: item.id,
-                title: item.title,
-                views: item.views,
-                videoFile: item.fileUrl
+                id:item.id,
+                title:item.title,
+                views:item.views,
+                videoFile:item.fileUrl
             })
-
