--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,10 +1,12 @@
 
-.social-login  
+.social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        | Continue with Github
+        a(href=routes.gitHub)
+            span
+                i.fab.fa-github 
+            |Continue with Github
     button.social-login--facebook
-        span
-            i.fab.fa-facebook-square
-        | Continue with Facebook    
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook 
+            |Continue with Facebook 
